--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">MECHA</string>
+    <string name="menu_inicio">Inicio</string>
+    <string name="menu_notas">Notas</string>
+    <string name="menu_registrar">Registrar</string>
+    <string name="menu_salir">Salir</string>
 </resources>
